[package]
name = "my_wasm_project"
version = "0.1.0"
edition = "2024"
description = "My WASM rust project test"
# license = "MIT"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "^0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement", "FileReader", "HtmlInputElement"] }
js-sys = "0.3"
