[package]
name = "my_wasm_project"
version = "0.1.0"
edition = "2024"
description = "My WASM rust project test"
repositiory = "https://github.com/Who5673/coc-nasm-web"
# license = "MIT"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "^0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "^0.3.77"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d", 
    "HtmlImageElement", 
    "FileReader",
    "HtmlInputElement",
    "Element", 
    "console"
]